push fin de journée

--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -37,13 +37,13 @@ p{
     font-weight: bold;
 }
 
-.input1, .input2, .poids, .taille{
+.input1, .input2, .poids, .taille, .findnbr{
     border: 1px solid rgb(10, 124, 109);
     border-radius: 5px;
 
 }
 
-.compare, .calculerImc{
+.compare, .calculerImc, .submitnbr{
     border-radius: 10px;
 }
 
